<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>de.dhbw.rahmlab</groupId>
		<artifactId>DSL4GA__Parent</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>
	<groupId>de.dhbw.rahmlab</groupId>
	<artifactId>DSL4GA_Viewer</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<annotation-processing.version>1.0-SNAPSHOT</annotation-processing.version>
		<generatedSourcesDirectory>${project.build.directory}/generated-sources/DSL4GA_Annotation</generatedSourcesDirectory>
		<generatedTestSourcesDirectory>${project.build.directory}/generated-test-sources/DSL4GA_Annotation</generatedTestSourcesDirectory>
		<skipTests>false</skipTests>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<dependencies>
		
		<dependency>
			<groupId>de.orat.view3d</groupId>
			<artifactId>Euclid3DViewAPI</artifactId>
			<version>1.0-SNAPSHOT</version>
			<type>jar</type>
		</dependency>
		
        <dependency>
            <groupId>org.apache.dubbo</groupId>
            <artifactId>dubbo</artifactId>
            <version>3.3.0</version>
        </dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.14.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/cga</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<generatedSourcesDirectory>${generatedSourcesDirectory}</generatedSourcesDirectory>
					<generatedTestSourcesDirectory>${generatedTestSourcesDirectory}</generatedTestSourcesDirectory>
					<annotationProcessorPaths>

						<path>
							<groupId>de.dhbw.rahmlab</groupId>
							<artifactId>DSL4GA_Annotation</artifactId>
							<version>1.0-SNAPSHOT</version>
						</path>

					</annotationProcessorPaths>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>de.dhbw.rahmlab</groupId>
						<artifactId>DSL4GA_Annotation</artifactId>
						<version>1.0-SNAPSHOT</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<dependencies>
					<dependency>
						<groupId>me.fabriciorby</groupId>
						<artifactId>maven-surefire-junit5-tree-reporter</artifactId>
						<version>1.2.1</version>
					</dependency>
				</dependencies>
				<configuration>
					<reportFormat>plain</reportFormat>
					<consoleOutputReporter>
						<!-- <disable>true</disable> -->
						<disable>false</disable>
					</consoleOutputReporter>
					<!--
					<statelessTestsetInfoReporter
						implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter">
						<theme>ASCII</theme>
						<printStacktraceOnError>true</printStacktraceOnError>
						<printStacktraceOnFailure>true</printStacktraceOnFailure>
						<printStdoutOnError>true</printStdoutOnError>
						<printStdoutOnFailure>true</printStdoutOnFailure>
						<printStdoutOnSuccess>true</printStdoutOnSuccess>
						<printStderrOnError>true</printStderrOnError>
						<printStderrOnFailure>true</printStderrOnFailure>
						<printStderrOnSuccess>true</printStderrOnSuccess>
				</statelessTestsetInfoReporter>
					-->
					<includes>
						<include>*.java</include>
					</includes>
					<excludes>
						<exclude>**/test/parsing/**</exclude>
					</excludes>
					<encoding>${project.build.sourceEncoding}</encoding>
					<!-- Erläuterungen: https://www.tutego.de/blog/javainsel/category/java-9/ -->
					<argLine>-Dfile.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dsun.stdout.encoding=UTF-8 -Dgraalvm.locatorDisabled=true --add-exports org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED --add-exports org.graalvm.truffle/com.oracle.truffle.api.exception=ALL-UNNAMED --add-exports org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED --add-exports org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED</argLine>
					<skipTests>${skipTests}</skipTests>
					<trimStackTrace>false</trimStackTrace>
					<!-- <printSummary>false</printSummary> -->
					<enableAssertions>false</enableAssertions>
					<testFailureIgnore>false</testFailureIgnore>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>add-test-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${generatedTestSourcesDirectory}</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
